2006-08-09 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux2.mk, local/openpower-linux1.mk, local/amd64-linux1.mk,
	  local/amd64-linux1, local/ucf-cf-alpha-linux1.mk: changed glibc version
	  number from 2.2 to 2.3
	* local/ppc-osx3.mk, local/sparc-solaris1.mk: removed (g)libc version number
	* lib/variables.mk: default HOSTOS and TARGETOS are unknown-unknown-unknown

2006-08-01 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.k, lib/doc-archive.mk, lib/src-archive.mk:
	  changed package formats from *.tar.gz to *.tar.bz2
	* components/sdcc-extra.mk: corrected configure source to sdcc-extra

2006-07-28 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: add doc/*.html to the doc archive

2006-07-12 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: copy the contents of doc directory

2006-07-09 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, lib/variables.mk: make
	  ChangeLog heads available on the WEB
	* local/amd64-linux1.mk: enable the pic16 regression tests

2006-07-07 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: added --host and --build options to
	  configure, so that sdcc-extra can be cross-compiled
	* components/sdcc.mk, lib/bootstrap.mk, lib/variables.mk: make
	  regression test results available on the WEB
	* lib/bootstrap.mk, lib/upload.mk: rules do_update and
	  remove-old-versions moved to newly added upload.mk,
	  remove-old-versions removes old versions in $(WEBREGTESTDIR)
	* lib variables.mk: HTDOCDIR corrected to HTDOCSDIR
	* Makefile: added include upload.mk

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: accept TARGETXXX configure options

2006-07-03 Borut Razem <borut.razem AT siol.net>

	* local/ppc-osx3.mk: added
	* sdcc-build-bootstrap.sh: Remove the stamp
	* components/sdcc.mk: introduced TARGETCPPFLAGS configure option

2006-06-30 Borut Razem <borut.razem AT siol.net>

	* local/openpower-linux1.mk: added
