@@ -1,3 +1,8 @@
+2006-08-12 Borut Razem <borut.razem AT siol.net>
+
+	* lib/src-archive.mk: use do-upload for snapshot and doc uploading
+	  to sdcc WEB
+
 2006-08-09 Borut Razem <borut.razem AT siol.net>
 
 	* local/x86-linux2.mk, local/openpower-linux1.mk, local/amd64-linux1.mk,
